# pylock

./: .gitignore  README.md  pyproject.toml
src/pylock/: __init__.py  __main__.py  config.py  locker.py
src/pylock/gui/: __init__.py  app.py  history.py
