[project]
name = "pylock"
version = "0.1.0"
description = "File encryption tool using AES ZIP + TAR"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=5.2.2",
    "pyinstaller>=6.19.0",
    "pyzipper>=0.1.0",
]

[project.scripts]
pylock = "pylock.__main__:main"
pylock-gui = "pylock.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pylock"]

[tool.hatch.build.targets.sdist]
include = ["src/pylock", "pyproject.toml"]
